welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:40: error: expected start of definition
override def run() {
         ^MethodsPicture:45: error: Unmatched closing brace '}' ignored here
}
^